plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.0.1.5171"
	id 'jacoco'
}

group = 'com.cleanengine'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


jacoco { //추가함
	toolVersion = "0.8.13"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}

//	afterEvaluate {
//		getClassDirectories().setFrom(files(classDirectories.files.collect{
//			fileTree(dir : it, includes: [
//					"com/cleanengine/coin/realitybot/**"
//			])
//		}))
//	}
}
bootRun {
	jvmArgs = [
			"-javaagent:monitoring/opentelemetry-javaagent.jar",
			"-Dotel.service.name=my-spring-app",
			"-Dotel.traces.exporter=otlp",
			"-Dotel.exporter.otlp.endpoint=http://localhost:4318",
			"-Dotel.logs.exporter=none",
			"-Dotel.metrics.exporter=none",
			"-Dotel.instrumentation.methods.enabled=true"
	]
}
dependencies {

  implementation 'org.springframework.boot:spring-boot-starter-websocket' // WS + STOMP

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation("io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.16.0")

	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'com.google.guava:guava:31.0.1-jre'
	implementation 'com.google.code.gson:gson:2.13.1'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'com.h2database:h2'
	implementation("org.mariadb.jdbc:mariadb-java-client:3.3.3")  // ← 드라이버
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.4.5'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mariadb'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'org.junit.platform:junit-platform-suite:1.10.0'
	// Spring Security + OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
}

tasks.named('test') {
	useJUnitPlatform{
		excludeTags 'testcontainers'
	}
	finalizedBy jacocoTestReport
}

sonar {
  properties {
    property "sonar.projectKey", "CleanEngine_cleanengine-be_2b6f2f63-fa39-426c-b9c7-8aa127fd14d8"
    property "sonar.projectName", "cleanengine-be"
    property "sonar.host.url", System.getenv('SONAR_HOST_URL') ?: 'http://localhost:9000'
    property "sonar.token", System.getenv('SONAR_TOKEN') ?: ''
    property "sonar.java.source", '21'
    property "sonar.java.target", '21'
    property "sonar.sourceEncoding", "UTF-8"
    property "sonar.java.coveragePlugin", "jacoco"
    property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
  }
}